--- a/index.html
+++ b/index.html
@@ -28,51 +28,51 @@
         <section class="hero">
             <h1 class="hero-title">Game Store</h1>
         </section>
-
+        <button id="add-games">Press to add all games BETA-ALPHA-OMEGA BUTTON 2.79 </button>
         <h2>Horror</h2>
         <ul class="games">
             <li>
-                <h3>Project Zomboid</h3>
-                <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/108600/header.jpg?t=1639992670" alt="">
-                <a href="" class="btn btn-primary">BUY FOR $9.99</a>
+                <h3>title</h3>
+                <img src="" alt="">
+                <a href="" class="btn btn-primary">price</a>
             </li>
             <li>
-                <h3>Phasmophobia</h3>
-                <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/739630/header.jpg?t=1638041534" alt="">
-                <a href="" class="btn btn-primary">BUY FOR $14.99</a>
+                <h3>title</h3>
+                <img src="" alt="">
+                <a href="" class="btn btn-primary">price</a>
             </li>
             <li>
-                <h3>Dead By Daylight</h3>
-                <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/381210/header.jpg?t=1639165101" alt="">
-                <a href="" class="btn btn-primary">BUY FOR $19.99</a>
+                <h3>title</h3>
+                <img src="" alt="">
+                <a href="" class="btn btn-primary">price</a>
             </li>
             <li>
-                <h3>The Forest</h3>
-                <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/242760/header.jpg?t=1590522045" alt="">
-                <a href="" class="btn btn-primary">BUY FOR $4.99</a>
+                <h3>title</h3>
+                <img src="" alt="">
+                <a href="" class="btn btn-primary">price</a>
             </li>
         </ul>     
         <h2>Adventure</h2>
         <ul class="games">
             <li>
-                <h3>Red Dead Redemption 2</h3>
-                <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1174180/header.jpg?t=1618851907" alt="">
-                <a href="" class="btn btn-primary">BUY FOR $19.99</a>
+                <h3>title</h3>
+                <img src="" alt="">
+                <a href="" class="btn btn-primary">price</a>
             </li>
             <li>
-                <h3>Sea of Thieves</h3>
-                <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1172620/header.jpg?t=1638484040" alt="">
-                <a href="" class="btn btn-primary">BUY FOR $29.99</a>
+                <h3>title</h3>
+                <img src="" alt="">
+                <a href="" class="btn btn-primary">price</a>
             </li>
             <li>
-                <h3>Forza Horizon 5</h3>
-                <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/1551360/header.jpg?t=1640881911" alt="">
-                <a href="" class="btn btn-primary">BUY FOR $9.99</a>
+                <h3>title</h3>
+                <img src="" alt="">
+                <a href="" class="btn btn-primary">price</a>
             </li>
             <li>
-                <h3>Grand Theft Auto V</h3>
-                <img src="https://cdn.cloudflare.steamstatic.com/steam/apps/271590/header.jpg?t=1618856444" alt="">
-                <a href="" class="btn btn-primary">BUY FOR $49.99</a>
+                <h3>title</h3>
+                <img src="" alt="">
+                <a href="" class="btn btn-primary">price</a>
             </li>
         </ul>
     </main>
