--- a/index.html
+++ b/index.html
@@ -25,56 +25,7 @@
             </header>
             <!-- </header> -->
     <main>
-        <section class="hero">
-            <h1 class="hero-title">Game Store</h1>
-        </section>
-        <button id="add-games">Press to add all games BETA-ALPHA-OMEGA BUTTON 2.79 </button>
-        <h2>Horror</h2>
-        <ul class="games">
-            <li>
-                <h3>title</h3>
-                <img src="" alt="">
-                <a href="" class="btn btn-primary">price</a>
-            </li>
-            <li>
-                <h3>title</h3>
-                <img src="" alt="">
-                <a href="" class="btn btn-primary">price</a>
-            </li>
-            <li>
-                <h3>title</h3>
-                <img src="" alt="">
-                <a href="" class="btn btn-primary">price</a>
-            </li>
-            <li>
-                <h3>title</h3>
-                <img src="" alt="">
-                <a href="" class="btn btn-primary">price</a>
-            </li>
-        </ul>     
-        <h2>Adventure</h2>
-        <ul class="games">
-            <li>
-                <h3>title</h3>
-                <img src="" alt="">
-                <a href="" class="btn btn-primary">price</a>
-            </li>
-            <li>
-                <h3>title</h3>
-                <img src="" alt="">
-                <a href="" class="btn btn-primary">price</a>
-            </li>
-            <li>
-                <h3>title</h3>
-                <img src="" alt="">
-                <a href="" class="btn btn-primary">price</a>
-            </li>
-            <li>
-                <h3>title</h3>
-                <img src="" alt="">
-                <a href="" class="btn btn-primary">price</a>
-            </li>
-        </ul>
+        <section id="games"></section>
     </main>
 <!-- <footer> -->
     <footer>
