haciendo merge del complementario 09 y añadiendo hero

--- a/index.html
+++ b/index.html
@@ -24,7 +24,10 @@
                 </div>
             </header>
             <!-- </header> -->
-    <main>
+    <main>        
+        <section class="hero">
+            <h1 class="hero-title">Game Store</h1>
+        </section>
         <section id="games"></section>
     </main>
 <!-- <footer> -->
