--- a/register.html
+++ b/register.html
@@ -49,6 +49,6 @@
     </footer>
     <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="javascript/proyecto.js"></script>
+    <script src="javascript/accounts.js"></script>
 </body>
 </html>
