--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 justify-content-end">
                         <li class="nav-item">
-                        <i class="fa" style="font-size:24px">&#xf07a;</i>
-                        <span class='badge badge-warning' id='lblCartCount'>0</span>
+                            <a class="nav-link" href="cart.html">
+                            <i class="fa" style="font-size:24px">&#xf07a;</i>
+                            <span class='badge badge-warning' id='lblCartCount'>0</span>
+                            </a>                        
                         </li>                        
                         <li class="nav-item">
                             <a class="nav-link" href="#">Login</a>
