--- a/cart.html
+++ b/cart.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header class="navbar navbar-dark navbar-expand-lg sticky-top justify-content-between px-4">
@@ -14,9 +15,11 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 justify-content-end">
                 <li class="nav-item">
+                    <a class="nav-link" href="cart.html">
                     <i class="fa" style="font-size:24px">&#xf07a;</i>
                     <span class='badge badge-warning' id='lblCartCount'>0</span>
-                </li>  
+                    </a>                        
+                </li>    
                 <li class="nav-item">
                     <a class="nav-link" href="#">Login</a>
                 </li>
