--- a/register.html
+++ b/register.html
@@ -6,13 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header class="navbar navbar-dark navbar-expand-lg sticky-top justify-content-between px-4">
         <a href="index.html" class="px-1"><img src="media/images/game_logo.png" alt="Imagen de bmth" /></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 justify-content-end">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 justify-content-end"> 
+                <li class="nav-item">
+                    <a class="nav-link" href="cart.html">
+                    <i class="fa" style="font-size:24px">&#xf07a;</i>
+                    <span class='badge badge-warning' id='lblCartCount'>0</span>
+                    </a>                        
+                </li>  
                 <li class="nav-item">
                     <a class="nav-link" href="#">Login</a>
                 </li>
@@ -50,5 +57,6 @@
     <script src="https://code.iconify.design/2/2.0.3/iconify.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="javascript/accounts.js"></script>
+    <SCript src="javascript/shopping.js"></SCript>
 </body>
 </html>
