--- a/register.html
+++ b/register.html
@@ -32,13 +32,15 @@
 
     <main>
         <form id="completeData">
-                <h1>Register</h1>
+            <fieldset>
+                <legend>Register</legend>
                 <input class="form-control text-center" type="text" name="username" placeholder="Please type a username" required/>
                 <input class="form-control text-center"  type="email" name="email" placeholder="Your email" required/>
-                <input class="form-control text-center"  type="password" name="password" placeholder="Password" required/>                
+                <input class="form-control text-center"  type="password" name="password" placeholder="Password" required/>
                 <input class="form-control text-center" type="text" name="name" placeholder="What's your name?" required/>
                 <input class="form-control text-center" type="number" name="age" placeholder="How old are you?" required/>
-                <button class="btn btn-primary" type="submit">Submit</button>                   
+                <button class="btn btn-primary" type="submit">Submit</button>
+            </fieldset>             
         </form>               
     </main>
 
