--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             </a>                        
                         </li>                        
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Login</a>
+                            <a class="nav-link" href="index.html">Login</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="register.html">Register</a>
